# SlackAutoCorrectionBot

./: .dockerignore  .gitignore  README.md  app.py  fly.toml  pyproject.toml
